--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ db.driver=com.mysql.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
-entitymanager.packagesToScan=com
-server.port=8088
+entitymanager.packagesToScan=pl
+server.port=8089
