--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <start-class>netgloo.Application</start-class>
+        <start-class>configuration.App</start-class>
         <java.version>1.8</java.version>
     </properties>
 
